--- a/less/media.less
+++ b/less/media.less
@@ -1,5 +1,24 @@
 .media-component {
+	.ghost-container {
+        
+        position: relative;
+    
+        img{
+            width: 100%;
+            height: auto;
+        }
 
+        iframe{
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            left: 0;
+            right: 0;
+            top: 0;
+            bottom: 0;
+        }
+        
+    }
     .me-plugin {
         position:relative;
         width:100%;
