Rename to media-brightcove to solve media-contrib conflicts

--- a/less/media-brightcove.less
+++ b/less/media-brightcove.less
@@ -1,5 +1,6 @@
-.media-component {
-	.ghost-container {
+
+.media-brightcove-component {
+    .ghost-container {
         
         position: relative;
     
@@ -19,6 +20,9 @@
         }
         
     }
+}
+.media-component {
+	
     .me-plugin {
         position:relative;
         width:100%;
